--- a/modules/contract_premium_modification/locale/fr.po
+++ b/modules/contract_premium_modification/locale/fr.po
@@ -156,6 +156,14 @@ msgctxt "field:commercial_discount.rule,duration_rule_extra_data:"
 msgid "Duration Rule Extra Data"
 msgstr "Paramètres de la règle"
 
+msgctxt "field:commercial_discount.rule,eligibility_rule:"
+msgid "Eligibility Rule"
+msgstr "Règle de calcul d'éligibilité"
+
+msgctxt "field:commercial_discount.rule,eligibility_rule_extra_data:"
+msgid "Eligibility Rule Extra Data"
+msgstr "Paramètres de la règle"
+
 msgctxt "field:commercial_discount.rule,id:"
 msgid "ID"
 msgstr "Identifiant"
@@ -295,6 +303,10 @@ msgstr "Avec exonération de prime"
 msgctxt "field:contract.option,discounts:"
 msgid "Discounts"
 msgstr "Réductions Commerciales"
+
+msgctxt "field:contract.option,possible_discounts:"
+msgid "Possible Discounts"
+msgstr "Réductions Commerciales Possibles"
 
 msgctxt "field:contract.option,waivers:"
 msgid "Waivers"
@@ -437,6 +449,11 @@ msgctxt ""
 "field:contract.premium_modification.discount-contract.option,discount:"
 msgid "Discount"
 msgstr "Réduction Commerciale"
+
+msgctxt ""
+"field:contract.premium_modification.discount-contract.option,discount_rule:"
+msgid "Discount Rule"
+msgstr "Règle de Réduction Commerciale"
 
 msgctxt ""
 "field:contract.premium_modification.discount-contract.option,end_date:"
@@ -665,6 +682,14 @@ msgctxt "field:waiver_premium.rule,duration_rule_extra_data:"
 msgid "Duration Rule Extra Data"
 msgstr "Paramètres de la règle"
 
+msgctxt "field:waiver_premium.rule,eligibility_rule:"
+msgid "Eligibility Rule"
+msgstr "Règle de calcul d'éligibilité"
+
+msgctxt "field:waiver_premium.rule,eligibility_rule_extra_data:"
+msgid "Eligibility Rule Extra Data"
+msgstr "Paramètres de la règle"
+
 msgctxt "field:waiver_premium.rule,func_key:"
 msgid "Functional Key"
 msgstr "Clé fonctionnelle"
@@ -865,6 +890,11 @@ msgctxt "model:ir.action,name:act_show_waivers_of_premium"
 msgid "Waivers of Premium"
 msgstr "Exonérations de prime"
 
+msgctxt "model:ir.message,text:msg_automatic_discount_rules"
+msgid "All rules should have the same value for the boolean automatic"
+msgstr ""
+"Toutes les règles doivent avoir la même valeur pour le booléen automatique"
+
 msgctxt "model:ir.ui.menu,name:menu_commercial_discount_form"
 msgid "Discounts"
 msgstr "Réductions Commerciales"
@@ -927,6 +957,14 @@ msgctxt ""
 "selection:contract.premium_modification.set_end_date.choice,modification_kind:"
 msgid "Waiver"
 msgstr "Exonération"
+
+msgctxt "selection:rule_engine,type_:"
+msgid "Duration Of A Discount"
+msgstr "Durée d'une Réduction Commerciale"
+
+msgctxt "selection:rule_engine,type_:"
+msgid "Eligibility Of A Discount"
+msgstr "Eligibilité d'une Réduction Commerciale"
 
 msgctxt "selection:rule_engine,type_:"
 msgid "Waiver Of Premium Duration"
