--- a/modules/commission_insurance/doc/fr/CHANGELOG
+++ b/modules/commission_insurance/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#13326 Ajout de deux APIs pour la fermeture et la réouverture de réseaux de distribution
+
 Version 2.6 - 2019-10-11
 * OTH#00000 Correctif pour éviter un crash lors du calcul des commission sur une garantie qui n'a pas de règle de tarification
 * BUG#12166 Correction de nouveaux cas pour le simulateur de commission
