--- a/modules/distribution/doc/fr/CHANGELOG
+++ b/modules/distribution/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13326 Implémentation des API: Mise a jour des reseaux de distribution
 * BUG#13006 Fix des classes API des réseaux de distribution
 
 Version 3.6 - 2019-10-11
