--- a/modules/distribution/doc/en/CHANGELOG
+++ b/modules/distribution/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13326 new API Implemented: distribution network update
 * BUG#13006 Fix distribution network API classes
 
 Version 2.6 - 2019-10-11
