--- a/modules/claim/doc/en/CHANGELOG
+++ b/modules/claim/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13546 Allow to easily close contract with the new status 'dropped'
 * BUG#8308 The claim sequence prefix can now be edited
 * OTH#00000 Add migration for field "Name" on benefit event description and loss description
 * OTH#00000 Improve administration benefit view to display all loss desc 
