migrator_bank: fix bug (#3406)
* migrator_bank: fix bug

--- a/modules/migrator_bank/doc/fr/CHANGELOG
+++ b/modules/migrator_bank/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13731 correctif de la méthode execute du batch migrator.bank_account
 * BUG#12845 correctif de la migration des comptes bancaires avec plusieurs
 propriétaires
 * FEA#12847 Ajout de migrator du mandat sepa
