--- a/modules/contract_underwriting/doc/en/CHANGELOG
+++ b/modules/contract_underwriting/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#0000 Dodge contract/option extra data kind validation on subscription
+
 Version 2.6 - 2019-10-11
 * FEA#12790 Add underwriting subscriber decision API
 * FEA#12685 Add underwriting reception API
