--- a/modules/contract_underwriting/doc/fr/CHANGELOG
+++ b/modules/contract_underwriting/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#0000 Contourne la validation du type des données complémentaires des options et des contracts à la soucription
+
 Version 2.6 - 2019-10-11
 * FEA#12790 Ajouter d'un API de saisie de la décision du souscripteur pour l'analyse de risque
 * FEA#12685 Ajout d'une api de saisie de résultat d'analyse de risque
