--- a/modules/claim/doc/fr/CHANGELOG
+++ b/modules/claim/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13754 L'onglet beneficiaire va être caché pour les prestations de type souscription
 * FEA#13546 Permettre la fermeture facile des contrats avec le nouveau status 'sans suite'
 * BUG#8308 La séquence du sinistre peut désormais être modifiée
 * OTH#00000 Ajout d'une migration pour le champ "Nom" sur le descripteur de préjudice et le descripteur d'évènement
