distribution: check tests result for distribution networks APIs (#3405)
Fix #13653

--- a/modules/commission_insurance/doc/fr/CHANGELOG
+++ b/modules/commission_insurance/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13653 Ajout de tests pour les deux APIS de réseaux de distribution
 * FEA#13326 Ajout de deux APIs pour la fermeture et la réouverture de réseaux de distribution
 
 Version 2.6 - 2019-10-11
