--- a/modules/commission_insurance/doc/en/CHANGELOG
+++ b/modules/commission_insurance/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13653 Add tests for the two distribution networks APIS 
 * FEA#13326 Add two APIs to close and reopen distribution networks
 
 Version 2.6 - 2019-10-11
