--- a/modules/third_party_right_management/doc/en/CHANGELOG
+++ b/modules/third_party_right_management/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#13781 Contract renewal should adjust third party periods according to changes on contract
+
 Version 2.6 - 2019-10-11
 * BUG#12476 Endorsements cancellations do not restore third party periods
 * OTH#00000 Fix period management for endorsements
