--- a/modules/offered/locale/fr.po
+++ b/modules/offered/locale/fr.po
@@ -38,6 +38,10 @@ msgctxt "field:extra_data,domain:"
 msgid "Domain"
 msgstr "Domaine"
 
+msgctxt "field:extra_data,gdpr:"
+msgid "GDPR Extraction"
+msgstr "Extraction RGPD"
+
 msgctxt "field:extra_data,has_default_value:"
 msgid "Default Value"
 msgstr "Valeur par Défaut"
@@ -1005,6 +1009,10 @@ msgstr "Identifiant XML"
 msgctxt "help:extra_data,domain:"
 msgid "Example: [[\"my_code\", \">=\", 5], [\"my_code\", \"<\", 12]]"
 msgstr "Exemple: [[\"mon_code\", \">=\", 5], [\"mon_code\", \"<\", 12]]"
+
+msgctxt "help:extra_data,gdpr:"
+msgid "Specify if the data should be used in GDPR extractions"
+msgstr "Indique si la donnée peut être utilisée dans les extractions RGPD"
 
 msgctxt "help:extra_data,selection:"
 msgid "A couple of key and label separated by \":\" per line"
