claim_process: Crash in claim creation wizard (#3421)
Fix #13804

--- a/modules/claim_process/doc/fr/CHANGELOG
+++ b/modules/claim_process/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+BUG#13804 Correctif d'un bug dans le wizard de 'Déclaration/instruction de sinistre'
+
 Version 2.6 - 2019-10-11
 BUG#11416 Iteration sur le correctif incomplet
 
