contract: simulate api payment schedule aggregation (#3401)
Fix #13843

--- a/modules/api/doc/en/CHANGELOG
+++ b/modules/api/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13843 Add a negative amount schema
 * OTH#00000 Return a user-friendly error when API context is missing
 
 Version 2.6 - 2019-10-11
