--- a/modules/contract/doc/fr/CHANGELOG
+++ b/modules/contract/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13843 Déplacement de l'API simulate dans le module contrat
 * BUG#13518 Vérification du type métier des données complémentaires
 * BUG#13422 Ajout d'une option pour cacher le boutton appliquer le package sur les contrats emprunteur
 * OTH#00000 Définition de la date de condition dans l'API de contrat
