--- a/modules/contract_insurance/doc/en/CHANGELOG
+++ b/modules/contract_insurance/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13843 Add covereds information to simulate API
 * FEA#13568 Update fields in party GDPR extraction
 * BUG#13518 Check extra data business kind and coherence with existing party extra data
 * FEA#13570 New comment field on extra premium
