--- a/modules/contract_premium_modification/doc/en/CHANGELOG
+++ b/modules/contract_premium_modification/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13843 Add commercial discounts informations in simulate API
 * FEA#13410 Add automatic and time-bound commercial discounts
 * FEA#12989 Manage discounts in subscription API
 * OTH#00000 Update view attributes according to new buttons group id
