--- a/modules/contract_premium_modification/doc/fr/CHANGELOG
+++ b/modules/contract_premium_modification/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13843 Ajout des informations de réductions commerciales dans l'API simulate
 * FEA#13410 Ajout des réductions commerciales automatiques et limitées dans le temps
 * FEA#12989 Ajout des réductions commerciale à l'API de souscription
 * OTH#00000 Mise à jour de view attributes en fonction du nouvel id du groupe de boutons
