--- a/modules/offered/doc/en/CHANGELOG
+++ b/modules/offered/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13854 Handle extra data uppercase in apis
 * BUG#13732 Filter extra data returned in extra data groups by API
 * BUG#13518 Check extra data business kind
 * FEA#13273 Remove package forced extra data from product description API
