--- a/modules/offered/doc/fr/CHANGELOG
+++ b/modules/offered/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13854 Gestion des données complémentaire en majuscule dans les apis
 * BUG#13732 Filtrage des données complémentaires retournées dans les groupes de données complémentaires par API
 * BUG#13518 Vérification du type métier des données complémentaires
 * FEA#13273 Filtrage des données complémentaires forcées par les formules dans l'API de description des produits
