--- a/modules/claim_indemnification/doc/en/CHANGELOG
+++ b/modules/claim_indemnification/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13839 Enabling blocking substatuses on reoponed status
 * OTH#00000 Hotfix for feature 11618
 * FEA#11618 Generate document template on claims from payment groups and invoices
 * FEA#13318 Add rule engine function which returns total indemnificated (paid/validated) amount for a covered person and benefit on current term
