migrator_party: fix address migrator: all addresses imported in each job (#3354)

--- a/modules/migrator_party/doc/en/CHANGELOG
+++ b/modules/migrator_party/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FIX#00000 Fix address migration: all addresses are imported in each job
 * FEA#12844 Add start_date and end_date to party_relation migrator
 
 Version 2.6 - 2019-10-11
