--- a/modules/bank_fr/doc/en/CHANGELOG
+++ b/modules/bank_fr/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 import agencies for swift banks
 * BUG#13048 Fix bank loader: if the address party changes, we should create a new address, not update the party on the existing one
 
 Version 2.6 - 2019-10-11
