--- a/modules/endorsement_party/doc/en/CHANGELOG
+++ b/modules/endorsement_party/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12673 Manage death date on person record
 * BUG#00000 Fix call to update party address
 * BUG#11342 Allow endorsements on contracts on hold
 
