endorsement_insurance_invoice: Remove possible_billing_modes from endorsement data (#3395)
Fix #13869

--- a/modules/endorsement_insurance_invoice/doc/en/CHANGELOG
+++ b/modules/endorsement_insurance_invoice/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13869 Remove possible_billing_modes from endorsement data
 * BUG#12996 Fix crash when applying contract billing information endorsement which occures when changing direct debit day
 
 Version 2.6 - 2019-10-11
