--- a/modules/rule_engine/doc/en/CHANGELOG
+++ b/modules/rule_engine/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#13648 Fix wrong list of dates returned by rule engine function dates_changement_table()
+
 Version 2.6 - 2019-10-11
 * BUG#12447 Allow using errors in a rule used by another without tehcnical error generated
 * BUG#10976 Make add warning in rule engine create unique warning name
