--- a/modules/contract/doc/en/CHANGELOG
+++ b/modules/contract/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13780 Handle subscriptability in APIs
 * FEA#13843 Replace simulate API in contract module
 * BUG#13518 Check extra data business kind
 * BUG#13422 Add an option to Hide the apply package button in contract options
