--- a/modules/migrator_bank/doc/fr/CHANGELOG
+++ b/modules/migrator_bank/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#13808 Grouper les comptes bancaires qui nécessitent un traitement par un
+même job
 * BUG#13731 correctif de la méthode execute du batch migrator.bank_account
 * BUG#12845 correctif de la migration des comptes bancaires avec plusieurs
 propriétaires
