--- a/modules/commission_insurance/doc/fr/CHANGELOG
+++ b/modules/commission_insurance/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Passage du champ "contrat" sur les commissions en readonly
 * BUG#13653 Ajout de tests pour les deux APIS de réseaux de distribution
 * FEA#13326 Ajout de deux APIs pour la fermeture et la réouverture de réseaux de distribution
 
