commission_insurance_prepayment: Include all options in aggregate details (#3446)
Fix #00000

--- a/modules/commission_insurance_prepayment/doc/fr/CHANGELOG
+++ b/modules/commission_insurance_prepayment/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Prise en compte de toutes les garanties dans la visualisation du détail des commissions aggrégées de type précompte
+
 Version 2.6 - 2019-10-11
 * OTH#00000 Itération sur la description de calcul des commissions
 
