--- a/modules/commission_insurance_prepayment/doc/en/CHANGELOG
+++ b/modules/commission_insurance_prepayment/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Include all options in commission details when detailing aggregated commissions
+
 Version 2.6 - 2019-10-11
 * OTH#00000 Iteration on commission computation description
 
