--- a/modules/claim_group_life_fr/doc/en/CHANGELOG
+++ b/modules/claim_group_life_fr/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#13916 The deduction period amount is no more rounded to avoid cents gaps
+
 Version 2.6 - 2019-10-11
 Version 2.4 - 2019-04-12
 * BUG#11383 Fix amount computation in default french annexes periods limitation
