claim_group_life_fr: revaluate basic salary deduction period (#3437)
claim_group_life_fr: revaluate basic salary deduction period (#3089)

Fix #11792

--- a/modules/claim_group_life_fr/doc/en/CHANGELOG
+++ b/modules/claim_group_life_fr/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11792 Handle revaluation on basic salary if deduction periods
 * BUG#13916 The deduction period amount is no more rounded to avoid cents gaps
 
 Version 2.6 - 2019-10-11
