--- a/modules/claim_group_life_fr/locale/fr.po
+++ b/modules/claim_group_life_fr/locale/fr.po
@@ -55,6 +55,31 @@ msgid "XML Id"
 msgstr "Identifiant XML"
 
 msgctxt ""
+"field:contract.option.benefit,possible_revaluation_deduction_periods:"
+msgid "Possible Revaluation Deduction Periods"
+msgstr "Possible Revaluation Deduction Periods"
+
+msgctxt ""
+"field:contract.option.benefit,revaluation_on_basic_salary_deduction_periods:"
+msgid "Revaluation On Basic Salary Deduction Period Rule"
+msgstr "Règle période de déduction pour revalorisation sur le salaire de base"
+
+msgctxt "field:contract.option.benefit,revaluation_on_basic_salary_if_period:"
+msgid "Revaluation On Basic Salary If Deduction Period"
+msgstr "Revalorisation sur le salaire de base si période de déduction"
+
+msgctxt ""
+"help:contract.option.benefit,revaluation_on_basic_salary_deduction_periods:"
+msgid ""
+"If deduction rule defined, revaluation will be done on basic salary when "
+"computing indemnification periods with any of the following defined "
+"deduction period."
+msgstr ""
+"Si la règle de déduction est définie, la revalorisation sera effectuée sur "
+"le salaire de base lors du calcul des périodes d'indemnisation si une "
+"période de déduction spécifiée croise la période d'indemnisation."
+
+msgctxt ""
 "model:benefit.loss.description.deduction_period_kind,name:part_time_deduction_type"
 msgid "Part Time"
 msgstr "Mi-temps thérapeutique"
@@ -293,7 +318,7 @@ msgctxt ""
 msgid ""
 "ijb_ijss_mtt:Prestation de base - IJSS - mi-temps\n"
 "min_ijb_2_tdrj_mtt:Minimum de (Prestation de base / 2) et(100% traitement de référence - IJSS - mi-temps) \n"
-"tdrj_ijss_mtt: 100% Traitement de référence - IJSS - mi-temps"
+"tdrj_ijss_mtt: 100% Traitement de référénce - IJSS - mi-temps"
 msgstr ""
 "ijb_ijss_mtt:Prestation de base - IJSS - mi-temps\n"
 "min_ijb_2_tdrj_mtt:Minimum de (Prestation de base / 2) et(100% traitement de référence - IJSS - mi-temps) \n"
