--- a/modules/contract_set/doc/fr/CHANGELOG
+++ b/modules/contract_set/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#13919 Correctif d'un crash potentiel sur l'affichage des ensemble de contrat
+
 Version 2.6 - 2019-10-11
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
