--- a/modules/contract_insurance_invoice/doc/en/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13948 Fix default billing mode computation. the order defined at product level was not used following 11728
 * FEA#13245 Generate payment schedule data on a party in order to be able to print it
 * FEA#13843 Add invoice information to simulate API
 * BUG#13398 Correctly update move line payment date when there is an outstanding amount
