--- a/modules/contract_insurance_invoice/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13945 Ne pas annuler les quittances dans la méthode reinvoice car cela est fait dans la méthode rebill
 * BUG#13948 Correction du calcul du mode de facturation par défaut qui ne tenait plus compte de l'ordre défini au produit (suite à l'évolution 11728)
 * FEA#13245 Génération des données d'échéancier de paiement sur un tiers à des fins d'impression
 * FEA#13843 Ajoute les informations de quittancement dans l'API simulate
