migrator_bank: fix get_batch_configuration method (#3481)

--- a/modules/migrator_bank/doc/fr/CHANGELOG
+++ b/modules/migrator_bank/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13975 Correctif de la méthode get_batch_configuration
 * BUG#13876 correctif de la migration des comptes bancaires avec une option
 delete
 * FEA#13808 Grouper les comptes bancaires qui nécessitent un traitement par un
